# interface-reconstruction-library

./: .clang-format  .cproject  .gitignore  .project  CMakeLists.txt  Makefile  Makefile.in  Makefile.rules  README.md
examples/: CMakeLists.txt
examples/advector/: CMakeLists.txt  basic_mesh.cpp  basic_mesh.h  circle_rotation_2d.cpp  circle_rotation_2d.h  data.h  deformation_2d.cpp  deformation_2d.h  deformation_3d.cpp  deformation_3d.h  main.cpp  reconstruction_types.cpp  reconstruction_types.h  solver.cpp  solver.h  visualize.m  vof_advection.cpp  vof_advection.h
examples/cpp/: CMakeLists.txt  cube_cutting.cpp  localized_separator_link.cpp  polygon_cutting.cpp  polyhedron_cutting.cpp  polyhedron_write_to_vtk.cpp  reconstruction_elvira.cpp  reconstruction_mof.cpp
examples/fortran/: CMakeLists.txt  cube_cutting.f90  cutting_methods.f90  localized_separator_link.f90  polygon_cutting.f90  reconstruction_elvira.f90  reconstruction_mof.f90
examples/paraboloid_advector/: CMakeLists.txt  basic_mesh.cpp  basic_mesh.h  circle_rotation_2d.cpp  circle_rotation_2d.h  data.h  deformation_2d.cpp  deformation_2d.h  deformation_3d.cpp  deformation_3d.h  diagnostics.cpp  diagnostics.h  main.cpp  reconstruction_types.cpp  reconstruction_types.h  rotation_3d.cpp  rotation_3d.h  solver.cpp  solver.h  translation_3d.cpp  translation_3d.h  visualize.m  vof_advection.cpp  vof_advection.h  vtk.cpp  vtk.h
examples/simple_advector/: CMakeLists.txt  basic_mesh.cpp  basic_mesh.h  data.h  diagnostics.cpp  diagnostics.h  main.cpp  solver.cpp  solver.h  visualize.m
examples/simple_paraboloid_advector/: CMakeLists.txt  basic_mesh.cpp  basic_mesh.h  data.h  diagnostics.cpp  diagnostics.h  main.cpp  solver.cpp  solver.h  vtk.cpp  vtk.h
irl/: CMakeLists.txt
irl/c_interface/: CMakeLists.txt
irl/data_structures/: accumulator.h  accumulator.tpp  block_object_allocation.h  block_object_allocation.tpp  chained_block_storage.h  chained_block_storage.tpp  collection.h  collection.tpp  iterator_through_bracket_operator.h  iterator_through_bracket_operator.tpp  lister.h  lister.tpp  object_allocation_server.h  object_allocation_server.tpp  raw_pointer_wrapper.h  raw_pointer_wrapper.tpp  self_expanding_collection.h  self_expanding_collection.tpp  short_alloc.h  small_vector.h  small_vector.tpp  stack_vector.h  stack_vector.tpp  unordered_map.h
irl/distributions/: k_means.h  k_means.tpp  partition_by_normal_vector.h  partition_by_normal_vector.tpp
irl/fortran_interface/: CMakeLists.txt  f_cappeddodecahedron_LLTT_class.f90  f_cappeddodecahedron_LTLT_class.f90  f_cappeddodecahedron_LTTT_class.f90  f_cappedoctahedron_LTT_class.f90  f_cutpolygon.f90  f_geometriccuttinghelpers.f90  f_getvolumemoments.f90  f_hexahedron_class.f90  f_listedvm_vman_class.f90  f_localizedparaboloidlink_class.f90  f_lviraneighborhood_tet_class.f90  f_objectallocationserver_localizedparaboloidlink_class.f90  f_objectallocationserver_paraboloid_class.f90  f_objectallocationserver_triangulatedparaboloid_class.f90  f_optimizationbehavior_class.f90  f_paraboloid_class.f90  f_planarseparator_class.f90  f_planarseparatorpathgroup_class.f90  f_polyhedron24_class.f90  f_r2pweighting_class.f90  f_reconstructioninterface.f90  f_serializer.f90  f_symmetrichexahedron_class.f90  f_symmetricpyramid_class.f90  f_symmetrictriangularprism_class.f90  f_tagged_accumvm_sepvm_class.f90  f_tagged_accumvm_sepvol_class.f90  f_tagged_accumvm_tagged_accumvm_vol_class.f90  f_tri_class.f90  f_triangulatedparaboloid_class.f90  f_vm_class.f90  irl_fortran_interface.f90
irl/generic_cutting/: CMakeLists.txt  cut_polygon.h  cut_polygon.tpp  default_cutting_method.h  generic_cutting.h  generic_cutting.tpp  generic_cutting_definitions.h
irl/geometry/: CMakeLists.txt
irl/graphs/: path_graph_node.h  path_graph_node.tpp  stolen_graph.h  stolen_graph.tpp  un_directed_graph_node.h  un_directed_graph_node.tpp
irl/helpers/: SFINAE_boiler_plate.h  byte_buffer.h  byte_buffer.tpp  expression_templates.h  expression_templates.tpp  geometric_cutting_helpers.h  geometric_cutting_helpers.tpp  helper.h  helper.tpp  mymath.h  mymath.tpp  serializer.h  serializer.tpp
irl/interface_reconstruction_methods/: advected_plane_reconstruction.h  advected_plane_reconstruction.tpp  constrained_optimization_behavior.h  elvira.cpp  elvira.h  elvira_neighborhood.cpp  elvira_neighborhood.h  iterative_distance_solver.h  iterative_distance_solver.tpp  lvira_neighborhood.h  lvira_neighborhood.tpp  lvira_optimization.h  lvira_optimization.tpp  mof.h  mof.tpp  optimization_behavior.h  plane_distance.cpp  plane_distance.h  plane_distance.tpp  plvira_neighborhood.h  plvira_neighborhood.tpp  plvira_optimization.h  plvira_optimization.tpp  progressive_distance_solver.h  progressive_distance_solver.tpp  progressive_distance_solver_paraboloid.h  progressive_distance_solver_paraboloid.tpp  r2p_neighborhood.h  r2p_neighborhood.tpp  r2p_optimization.h  r2p_optimization.tpp  reconstruction_cleaning.h  reconstruction_cleaning.tpp  reconstruction_interface.h  reconstruction_interface.tpp  volume_fraction_matching.h  volume_fraction_matching.tpp
irl/moments/: CMakeLists.txt  accumulate_wrapper.h  accumulated_listed_volume_moments.h  accumulated_volume_moments.h  accumulated_volume_moments.tpp  cell_collection.h  cell_collection.tpp  cell_grouped_moments.h  cell_grouped_moments.tpp  general_moments.h  general_moments.tpp  listed_volume_moments.h  listed_volume_moments.tpp  moments_type_traits.h  separated_volume_moments.h  separated_volume_moments.tpp  tagged_accumulated_listed_volume_moments.h  tagged_accumulated_volume_moments.h  tagged_accumulated_volume_moments.tpp  volume.h  volume.tpp  volume_moments.h  volume_moments.tpp  volume_moments_and_doubles.h  volume_moments_and_doubles.tpp  volume_moments_and_normal.h  volume_moments_and_normal.tpp  volume_moments_with_gradient.h  volume_moments_with_gradient.tpp  volume_with_gradient.h  volume_with_gradient.tpp
irl/optimization/: CMakeLists.txt  bfgs.h  bfgs.tpp  bisection.h  (+14 more)
tests/: CMakeLists.txt  Makefile  Makefile_test.in  Makefile_test.rules
(+1041 files in other folders)
