# List of directories which will add their own files.

add_subdirectory(data_structures)
add_subdirectory(generic_cutting)
add_subdirectory(geometry)
add_subdirectory(helpers)
add_subdirectory(interface_reconstruction_methods)
add_subdirectory(moments)
add_subdirectory(parameters)
add_subdirectory(planar_reconstruction)

